Thunderbird 69.0 b1 trucates recepients (5 first characters) using MAPI's nsMapiHook::PopulateCompFieldsW()
Categories
(MailNews Core :: Simple MAPI, defect)
Tracking
(thunderbird_esr6868+ fixed, thunderbird69 fixed, thunderbird70 fixed)
People
(Reporter: baldo, Assigned: jorgk-bmo)
Details
Attachments
(1 file, 1 obsolete file)
|
1.25 KB,
patch
|
jorgk-bmo
:
review+
jorgk-bmo
:
approval-comm-beta+
jorgk-bmo
:
approval-comm-esr68+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:68.0) Gecko/20100101 Firefox/68.0
Steps to reproduce:
Send an email from another application (for instance from Microsoft Access with "DoCmd.SendObject") specifying the recepient (ex : recipient@destination.com)
Actual results:
The recipient's address is truncated : the first 5 characters disappear :
in the "For :" field
Some beta versions since the 60 branch sometimes displayed nothing, some other times also truncate the 5 first characters.
Expected results:
As in the non beta versions that work OK with the same program, it should display
recipient@destination.com.
| Assignee | ||
Comment 1•6 years ago
|
||
Hmm, that's bad, I'll take a look. Not many applications using MAPI specify the recipient.
Five rings a bell, it must be this code, but that looks right:
https://searchfox.org/comm-central/rev/2d079399f2abf8119b05fbd6bb5782b28412d881/mailnews/mapi/mapihook/src/msgMapiHook.cpp#605
But this doesn't :-(
https://searchfox.org/comm-central/rev/2d079399f2abf8119b05fbd6bb5782b28412d881/mailnews/mapi/mapihook/src/msgMapiHook.cpp#713
nsMapiHook::PopulateCompFieldsW() is new.
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 2•6 years ago
|
||
I don't know how this slipped through my review :-(
First reviewer wins.
Comment 3•6 years ago
|
||
| Assignee | ||
Comment 4•6 years ago
|
||
I've chatted a bit with Eric Rahm on IRC to see whether we need nsDependentSubstring here. In the end it's cheaper to use native Windows functions, in this case _wcsnicmp, wide string N ignore case compare.
Pushed by mozilla@jorgk.com:
https://hg.mozilla.org/comm-central/rev/c423618c2ac6
Fix logic error in string comparison in nsMapiHook::PopulateCompFieldsW(). r=mkmelin
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 6•6 years ago
|
||
TB 68.0 ESR:
https://hg.mozilla.org/releases/comm-esr68/rev/35d9da68475a55b796a9aecbe9944b9c9c5eb234
| Assignee | ||
Comment 7•6 years ago
|
||
Jérôme, please try the TB 68.0 ESR pre-release:
32bit: https://queue.taskcluster.net/v1/task/chOrjxdaRHG2WS0uIE9lWw/runs/0/artifacts/public/build/install/sea/target.installer.exe
64 bit: https://queue.taskcluster.net/v1/task/RfkCLtIjQJChRi8St_iDzA/runs/0/artifacts/public/build/install/sea/target.installer.exe
I'm not sure whether the 32bit version will execute the code path we fixed.
| Reporter | ||
Comment 8•6 years ago
|
||
I tested the 32 bit TB 68.0 ESR version on another PC, it worked like a charm with the full address. You can consider the bug as fixed and don't worry, if I see it appear again I will let you know, I use MAPI very frequently. Thanks again.
| Assignee | ||
Comment 9•6 years ago
|
||
| Reporter | ||
Comment 10•6 years ago
|
||
I confirm that the problem is fixed with TB 69 beta 3.
Description
•