Bug 1571724 - Fix logic error in string comparison in nsMapiHook::PopulateCompFieldsW(). r=mkmelin